@@ -1,0 +1,10 @@
+(nil
+ (0 0 240 56)
+ (:purpose edit :purpose-dedicated t :width 0.5 :height 1.0 :edges
+           (0.0 0.0 0.5 1.0))
+ (t
+  (120 0 240 56)
+  (:purpose terminal :purpose-dedicated t :width 0.5 :height 0.5 :edges
+            (0.5 0.0 1.0 0.5))
+  (:purpose general :purpose-dedicated nil :width 0.5 :height 0.5 :edges
+            (0.5 0.5 1.0 1.0))))
