@@ -1,0 +1,1 @@
+(nil (0 0 240 56) (:purpose edit :purpose-dedicated nil :width 0.5 :height 1.0 :edges (0.0 0.0 0.5 1.0)) (:purpose terminal :purpose-dedicated nil :width 0.5 :height 1.0 :edges (0.5 0.0 1.0 1.0)))
