@@ -30,16 +30,16 @@
 (require 'ring)
 (require 'window-purpose-core)
 
-;; (defconst purpose--installed-layouts-dir
-;;   (when load-file-name
-;;     (concat (file-name-directory load-file-name) "layouts/"))
-;;   "Location of built-in layouts shipped by us.")
+(defconst purpose--built-in-layouts-dir
+  (when load-file-name
+    (concat (file-name-directory load-file-name) "layouts/"))
+  "Location of built-in layouts shipped with Purpose.")
 
-;; (defcustom purpose-use-installed-layouts t
-;;   "If nil, don't use layouts from `purpose--installed-layouts-dir'."
-;;   :group 'purpose
-;;   :type 'boolean
-;;   :package-version "1.5")
+(defcustom purpose-use-built-in-layouts t
+  "If nil, don't use layouts from `purpose--built-in-layouts-dir'."
+  :group 'purpose
+  :type 'boolean
+  :package-version "1.6")
 
 (defcustom purpose-default-layout-file
   (concat user-emacs-directory ".purpose-layout")
@@ -248,13 +248,27 @@ DIRECTORY must be the name of an existing directory."
                        (format "%s%s" name suffix))
            return filename))
 
-(defun purpose-all-window-layouts (&optional layout-dirs)
+(defun purpose-normalize-layout-directories (&optional layout-dirs include-built-in-p)
+  "Return a list of layout directories.
+LAYOUT-DIRS is a list of directory names, and defaults to
+`purpose-layout-dirs'.
+If INCLUDE-BUILT-IN-P is non-nil, include
+`purpose--built-in-layouts-dir' in the result."
+  (if include-built-in-p
+      (append (or layout-dirs purpose-layout-dirs)
+              (list purpose--built-in-layouts-dir))
+    (or layout-dirs purpose-layout-dirs)))
+
+(defun purpose-all-window-layouts (&optional layout-dirs include-built-in-p)
   "Get a sorted list of all window layouts in LAYOUT-DIRS.
 LAYOUT-DIRS is a list of directory names, and defaults to
-`purpose-layout-dirs'."
+`purpose-layout-dirs'.
+If INCLUDE-BUILT-IN-P is non-nil, also search layouts in
+`purpose--built-in-layouts-dir'."
   (sort (delete-dups
          (purpose-flatten
-          (cl-loop for dir in (or layout-dirs purpose-layout-dirs)
+          (cl-loop for dir in (purpose-normalize-layout-directories
+                               layout-dirs include-built-in-p)
                    if (and (file-readable-p dir)
                            (file-directory-p dir))
                    collect (purpose--directory-files ".window-layout" dir))))
@@ -265,23 +279,29 @@ LAYOUT-DIRS is a list of directory names, and defaults to
 NAME is the name of the window layout.
 LAYOUT-DIRS is a list of directories to search for the layout file, and
 defaults to `purpose-layout-dirs'.  Any non-existent or unreadable
-directory is ignored.
+directory is ignored. If `purpose-use-built-in-layouts' is non-nil and
+the layout can't be found in LAYOUT-DIRS, then search also in
+`purpose--built-in-layouts-dir'.
 If there are severeal layouts with the same name, the first that is found
 is returned.  The directories are searched in the same order that they
 appear in LAYOUT-DIRS."
-  (cl-loop for dir in (or layout-dirs purpose-layout-dirs)
+  (cl-loop for dir in (purpose-normalize-layout-directories
+                       layout-dirs purpose-use-built-in-layouts)
            for filename = (and (file-readable-p dir)
                                (file-directory-p dir)
                                (purpose--file-with-suffix name ".window-layout" dir))
            if filename return filename))
 
-(defun purpose-all-frame-layouts (&optional layout-dirs)
+(defun purpose-all-frame-layouts (&optional layout-dirs include-built-in-p)
   "Get a sorted list of all frame layouts in LAYOUT-DIRS.
 LAYOUT-DIRS is a list of directory names, and defaults to
-`purpose-layout-dirs'."
+`purpose-layout-dirs'.
+If INCLUDE-BUILT-IN-P is non-nil, also search layouts in
+`purpose--built-in-layouts-dir'."
   (sort (delete-dups
          (purpose-flatten
-          (cl-loop for dir in (or layout-dirs purpose-layout-dirs)
+          (cl-loop for dir in (purpose-normalize-layout-directories
+                               layout-dirs include-built-in-p)
                    if (and (file-readable-p dir)
                            (file-directory-p dir))
                    collect (purpose--directory-files ".frame-layout" dir))))
@@ -292,11 +312,14 @@ LAYOUT-DIRS is a list of directory names, and defaults to
 NAME is the name of the frame layout.
 LAYOUT-DIRS is a list of directories to search for the layout file, and
 defaults to `purpose-layout-dirs'.  Any non-existent or unreadable
-directory is ignored.
+directory is ignored. If `purpose-use-built-in-layouts' is non-nil and
+the layout can't be found in LAYOUT-DIRS, then search also in
+`purpose--built-in-layouts-dir'.
 If there are severeal layouts with the same name, the first that is found
 is returned.  The directories are searched in the same order that they
 appear in LAYOUT-DIRS."
-  (cl-loop for dir in (or layout-dirs purpose-layout-dirs)
+  (cl-loop for dir in (purpose-normalize-layout-directories
+                       layout-dirs purpose-use-built-in-layouts)
            for filename = (and (file-readable-p dir)
                                (file-directory-p dir)
                                (purpose--file-with-suffix name ".frame-layout" dir))
@@ -409,13 +432,14 @@ If FILENAME is nil, use `purpose-default-layout-file' instead."
 NAME is the name to give the window layout.
 DIRECTORY is the directory in which to save the layout."
   (interactive
-   (if (null purpose-layout-dirs)
-       (user-error (concat "No directory is set for user layouts. "
-                           "Please add a directory to `purpose-layouts-dir'"))
-     (list (read-string "[PU] save layout name: ")
-           (funcall (purpose-get-completing-read-function)
-                    "[PU] save to directory: "
-                    purpose-layout-dirs nil t))))
+   (let ((layout-dirs (purpose-normalize-layout-directories nil nil)))
+     (if (null layout-dirs)
+         (user-error (concat "No directory is set for user layouts. "
+                             "Please add a directory to `purpose-layouts-dir'"))
+       (list (read-string "[PU] save layout name: ")
+             (funcall (purpose-get-completing-read-function)
+                      "[PU] save to directory: "
+                      layout-dirs nil t)))))
   (let ((layout-file (concat (file-name-as-directory directory)
                              name ".window-layout")))
     (unless (file-exists-p directory)
@@ -427,16 +451,16 @@ DIRECTORY is the directory in which to save the layout."
 NAME is the name of a window layout.  If NAME is not given, prompt the
 user for a name.
 LAYOUT-DIRS is a list of directories to search for the layout file, and
-defaults to `purpose-layout-dirs'.  See `purpose-find-window-layout' for
-more details.
+defaults to `purpose-layout-dirs'.  If `purpose-use-built-in-layouts',
+then `purpose--built-in-layouts-dir' is also searched.  See
+`purpose-find-window-layout' for more details.
 
 To load a window layout from a specific file, use
 `purpose-load-window-layout-file'."
   (interactive)
-  (let* ((name (or name (funcall (purpose-get-completing-read-function)
-                                 "[PU] Load window layout:"
-                                 (purpose-all-window-layouts) nil t)))
-         (layout-dirs (or layout-dirs purpose-layout-dirs)))
+  (let ((name (or name (funcall (purpose-get-completing-read-function)
+                                "[PU] Load window layout:"
+                                (purpose-all-window-layouts) nil t))))
     ;; layout with NAME is guaranteed to exist because of non-nil REQUIRE-MATCH
     ;; argument to (purpose-get-completing-read-function).
     (purpose-load-window-layout-file (purpose-find-window-layout name layout-dirs))))
@@ -511,13 +535,14 @@ If FILENAME is nil, use `purpose-default-layout-file' instead."
 NAME is the name to give the frame layout.
 DIRECTORY is the directory in which to save the layout."
   (interactive
-   (if (null purpose-layout-dirs)
-       (user-error (concat "No directory is set for user layouts. "
-                           "Please add a directory to `purpose-layouts-dir'"))
-     (list (read-string "[PU] save layout name: ")
-           (funcall (purpose-get-completing-read-function)
-                    "[PU] save to directory: "
-                    purpose-layout-dirs nil t))))
+   (let ((layout-dirs (purpose-normalize-layout-directories nil nil)))
+     (if (null layout-dirs)
+         (user-error (concat "No directory is set for user layouts. "
+                             "Please add a directory to `purpose-layouts-dir'"))
+       (list (read-string "[PU] save layout name: ")
+             (funcall (purpose-get-completing-read-function)
+                      "[PU] save to directory: "
+                      layout-dirs nil t)))))
   (let ((layout-file (concat (file-name-as-directory directory)
                              name ".frame-layout")))
     (unless (file-exists-p directory)
@@ -529,20 +554,16 @@ DIRECTORY is the directory in which to save the layout."
 NAME is the name of a frame layout.  If NAME is not given, prompt the
 user for a name.
 LAYOUT-DIRS is a list of directories to search for the layout file, and
-defaults to `purpose-layout-dirs'.  See `purpose-find-frame-layout' for
-more details.
+defaults to `purpose-layout-dirs'.  If `purpose-use-built-in-layouts',
+then `purpose--built-in-layouts-dir' is also searched.  See
+`purpose-find-frame-layout' for more details.
 
 To load a frame layout from a specific file, use
 `purpose-load-frame-layout-file'."
   (interactive)
-  (let* ((name (or name (funcall (purpose-get-completing-read-function)
-                                 "[PU] Load frame layout:"
-                                 (purpose-all-frame-layouts) nil t)))
-         ;; (all-layout-dirs (append purpose-layout-dirs
-         ;;                          (when purpose-use-installed-layouts
-         ;;                            (list purpose--installed-layouts-dir))))
-         ;; (layout-dirs (or layout-dirs all-layout-dirs))
-         (layout-dirs (or layout-dirs purpose-layout-dirs)))
+  (let ((name (or name (funcall (purpose-get-completing-read-function)
+                                "[PU] Load frame layout:"
+                                (purpose-all-frame-layouts) nil t))))
     ;; layout with NAME is guaranteed to exist because of non-nil REQUIRE-MATCH
     ;; argument to (purpose-get-completing-read-function).
     (purpose-load-frame-layout-file (purpose-find-frame-layout name layout-dirs))))
